# nepa

./: ORACLE_INTEGRATION_DOCUMENTATION.md  package-lock.json  package.json  schema.prisma
nepa-dapp/nepa_contract/: BUILD_INSTRUCTIONS.md  Cargo.toml
nepa-dapp/nepa_contract/src/: lib.rs  oracle.rs  tests.rs
nepa-dapp/src/: index.ts
nepa-dapp/src/api/: banking-integration.ts  credit-scoring.ts  index.ts  integration-layer.ts  integration-monitor.ts  utility-provider.ts
nepa-dapp/src/api/tests/: integration.test.ts
nepa-frontend/: tailwind.config.js
nepa-frontend/src/: App.tsx
